--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
                     </div>
            </div> 
            </section>
+           <div class="stats">
+              <div class="stats-grid">
+                 <h3 class="div-title">Joined Thousands of Productive Users</h3>
+                 <div class="stat-box">
+                    <h2>50K</h2>
+                    <p>Active Users</p>
+                 </div>
+                 <div class="stat-box">
+                   <h2>2M+</h2>
+                   <p>Focus Sessions</p>
+                 </div>
+                 <div class="stat-box">
+                   <h2>95%</h2>
+                   <p>Satisfaction Rate</p>
+                 </div>
+               </div>
+            </div>
 
            
         
